WIP blog Topics
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ github_username:  Kakadu
 # Build settings
 markdown: kramdown
 theme: minima
-plugins:
-  - jekyll-feed # https://github.com/jekyll/jekyll-feed
+#plugins:
+  #- jekyll-feed # https://github.com/jekyll/jekyll-feed
 
 feed:
   categories:
