--- a/unsorted/.obsidian/app.json
+++ b/unsorted/.obsidian/app.json
@@ -1,4 +1,10 @@
 {
-  "legacyEditor": false,
-  "livePreview": false
+  "legacyEditor": true,
+  "livePreview": false,
+  "showLineNumber": false,
+  "spellcheck": true,
+  "spellcheckLanguages": [
+    "en-US",
+    "ru"
+  ]
 }
