--- a/papers/lambda2023/cpp/.gitignore
+++ b/papers/lambda2023/cpp/.gitignore
@@ -5,10 +5,10 @@
 CMakeCache.txt
 CMakeCache.txt.prev
 CMakeFiles/
-CMakeLists.txt        
 Makefile
 build.ninja
 cmake_install.cmake
 lambda_exe
 qtcsettings.cmake
+demo1
 
