--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -46,6 +46,9 @@ jobs:
           JEKYLL_ENV: "production"
           PAGES_REPO_NWO: ${{ github.repository }}
 
+      - run: tree _site
+      - run: tree fp-book
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
