--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -46,7 +46,7 @@ jobs:
           JEKYLL_ENV: "production"
           PAGES_REPO_NWO: ${{ github.repository }}
 
-      - run: cp fp-book _site/fp-book
+      - run: cp fp-book _site/fp-book -r
       - run: find _site/papers -type f -not -iname '*.pdf' -exec rm -fr {} \;
       - run: tree _site
 
